src/tests/benchmarks/SemanticErrors/arrayCompareError_RESULT.ll

; Function Attrs: noinline nounwind optnone ssp uwtable
define i32 @main() {
  %1 = alloca i32, align 4
  %2 = alloca [2 x i32], align 4
  %3 = alloca [2 x i32], align 4
  %4 = load i32, i32* %2, align 4
  %5 = load i32, i32* %3, align 4
  %6 = icmp eq i32 %4, %5
  %7 = load i32, i32* %1, align 4
  ret i32 %7
}